
*** CORE/CPU ***
Better handle flickering lamps on Sega/Stern Whitestar machines
Fix sound command parsing for more (all?) Sega/Stern Whitestar machines, so altsound mode 1 should work much better now for these, incl. global volume control parsing
Add global volume control parsing for altsound mode 1 on the older WPCs (i.e. non-DCS)

*** ROM SUPPORT *** Thanks to inkochnito, Guru
New:
Stern S.A.M. IV Board Tester

Correct Dumps:

Clones:
World Cup Soccer LX-1



Version 3.4 (December 24th, 2021) - "Still delivering your christmas present"
------------------------------------------------------------------------------

Fixed multiple issues in the new libPinMAME (previously known as PinMAMEdll) library and completely revamp API (see libpinmame.h)
Fixed 64bit version of PinMAME32
Reenabled DirectDraw support for 64bit windows compiles of PinMAME, PinMAME32 and VPinMAME
Fixed some problems with the ROM audit

Added support to compile for Windows ARM64 (not all features/variants though, as some external libs do not feature ARM64 support yet)

Updated LISY support to 5.27-49 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'HOme' Pinballs)

Make Automatic Sound Dump functionality of PinMAME(32) more robust in its silence detection
One more audiophile tweak: added proper dithering after resampling to the final output sample rate

*** CORE/CPU ***
Fixed regression in solenoid emulation for Juegos Populares
Corrected NVRAM size for Mr. Game (NOTE: this means you need to delete the matching .nv files in the nvram folder for these machines!)
Fixed flasher sense for Pistol Poker (and maybe other Alvin G. games?)
Bypassed E.F.O. Z-Pinball system protection PAL chip, games are working now (Maibesa's Eight Ball Champ, Nondum/CIFA's Come Back and Playbar's Cobra)
Improve SAA1099 emulation (E.F.O.)
Prolonged pre-shutdown time for Joctronic so NVRAM is saved correctly
Found general tilt sense on LTD system 4